--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,49 +1,78 @@
-main{
+body {
+    font-family: Arial, sans-serif;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: justify;
+}
+h3{
+    margin-bottom: 5px;
+}
+
+th, td{
+    padding: 4px 15px;
+}
+
+.container {
     display: flex;
+    justify-content: space-between;
 }
-
-form{
-    padding: 12px;
+.input-container{
+    padding: 15px;
     background-color: rgb(219, 223, 228);
+    font-size: 14px;
+    border-radius: 10px;
 }
-
-aside{
-    padding: 48px;
+.input-section, .result-section {
+    width: 48%;
 }
-
-.main-title{
-    text-align: center;
-}
-
-.submit{
-    height: 32px;
-    border: none;
-    border-radius: 4px;
-    background-color: green;
-}
-
-.reset{
-    height: 32px;
-    border: none;
-    border-radius: 4px;
-    background-color: red;
-}
-
-.button-container{
-    margin-top: 24px;
-    margin-bottom: 20px;
-}
-
 input[type=number]{
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    padding: 8px 12px;
+    margin: 5px 0;
     display: inline-block;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     box-sizing: border-box;
 }
 
-footer{
+.calculate, .consult, .download{
+    background-color: #0c4e28;
+    border: none;
+    color: white;
+    padding: 8px 15px;
     text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    margin: 2px 2px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px #000000;
+}
+.reset, .regist{
+    background-color: #000000;
+    border: none;
+    color: white;
+    padding: 8px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    margin: 2px 2px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px #000000;
+}
+
+.result {
+    background-color: rgb(219, 223, 228);
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+.diseases {
+    margin-top: 20px;
 }
