--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,8 +5,13 @@ body {
     padding: 20px;
     text-align: justify;
 }
+
 h3{
     margin-bottom: 5px;
+}
+
+.title-desc{
+    margin-bottom: 10px;
 }
 
 th, td{
@@ -17,15 +22,20 @@ th, td{
     display: flex;
     justify-content: space-between;
 }
+
 .input-container{
     padding: 15px;
     background-color: rgb(219, 223, 228);
     font-size: 14px;
     border-radius: 10px;
+    box-shadow: 2px 2px 8px rgb(48, 46, 46);
+   
 }
+
 .input-section, .result-section {
     width: 48%;
 }
+
 input[type=number]{
     width: 100%;
     padding: 8px 12px;
@@ -51,6 +61,7 @@ input[type=number]{
     border-radius: 10px;
     box-shadow: 3px 3px 5px #000000;
 }
+
 .reset, .regist{
     background-color: #000000;
     border: none;
@@ -67,12 +78,31 @@ input[type=number]{
     box-shadow: 3px 3px 5px #000000;
 }
 
-.result {
+.result-container {
     background-color: rgb(219, 223, 228);
     padding: 20px;
     margin-top: 20px;
     border-radius: 10px;
+    box-shadow: 2px 2px 8px rgb(48, 46, 46);
 }
-.diseases {
+
+.klasifikasi {
     margin-top: 20px;
 }
+
+img{
+    width: 130px;
+    height: 65px;
+    cursor: pointer;
+}
+
+.footer{
+    background-color: #0c4e28;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 4px black;
+}
+
+
